Bug fixes
- Incorrect type used in Fills
- Added missing field in Fills.Data
- Removed debugging System.out.println
- Made OrderEIP entries final and used List.of instead
- Transferred the static methods to get the domains a final static value
- Added an overloaded method to use an ECKeyPair directly instead of having the library do it